2004-09-15  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	Add comment header for Addr_Info.
	Fix typo in comment.
	(AI_PASSIVE): New constant.
	(AI_CANONNAME): New constant.
	(AI_NUMERICHOST): New constant.
	Add pragma Linker_Options for Win32 platform.

2004-09-14  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	(Addr_Info): Add pragma Convention.

2004-09-13  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* src/check_config.c:
	(Addr_Info): Ada bind to addrinfo C record. Need to be generated
	 because Linux has a different fields order then in other platforms.

2004-08-10  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Send): Add Last out parameter. Change implementation.

2004-07-23  Pascal Obry  <pascal@obry.org>

	* src/check_config.c:
	Initial revision.
	Used to get some definitions from the OS include files.

	* makefile:
	(setup): Add aws-os_lib-definitions.ads.
	(aws-os_lib-definitions.ads): New target.
	(clean): Remove test_uconv and check_config.

2004-05-26  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Receive): Change from function to procedure.

2004-04-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Set_Non_Blocking_Mode): New routine.
	(Set_Blocking_Mode): Removed.
	(Accept_Socket): Check for timeout. Make New_Socket non-blocking.
	(Bind): Make just created socket non-blocking.
	(Connect): Make connected socket non-blocking.

2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std__gnat.adb:
	(Send): Properly handle the case where all data are not sent
	 in one chunk.
	Fix from Thomas Quinot.

2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Wait_Mode): Moved to aws-net.adb.
	(Wait_For): Moved to aws-net.adb.
	(Wait_Mode): Read/Write -> Input/Output.

2004-03-09  Dmitriy Anisimkov <anisimkov@yahoo.com>
